--- a/erchl-frontend/src/app/app.component.css
+++ b/erchl-frontend/src/app/app.component.css
@@ -1,10 +1,8 @@
 /*
- * index.ts
+ * app.component.css
  *
  * Copyright (C) 2018 Finovertech
  *
  * This software may be modified and distributed under the terms
  * of the MIT license.  See the LICENSE file for details.
  */
-
-export { CompanyTypedef } from './company.typedef';
