--- a/erchl-frontend/src/app/auth/callback.component.html
+++ b/erchl-frontend/src/app/auth/callback.component.html
@@ -1,10 +1,13 @@
+<!--
 /*
- * index.ts
+ * callback.component.html
  *
  * Copyright (C) 2018 Finovertech
  *
  * This software may be modified and distributed under the terms
  * of the MIT license.  See the LICENSE file for details.
  */
+-->
 
-export { CompanyTypedef } from './company.typedef';
+<p>
+</p>
