--- a/erchl-frontend/src/app/details/details.component.css
+++ b/erchl-frontend/src/app/details/details.component.css
@@ -1,5 +1,5 @@
 /*
- * index.ts
+ * details.component.css
  *
  * Copyright (C) 2018 Finovertech
  *
@@ -7,4 +7,10 @@
  * of the MIT license.  See the LICENSE file for details.
  */
 
-export { CompanyTypedef } from './company.typedef';
+.odd {
+    background-color: rgb(226, 226, 226);
+}
+
+.comments {
+    background-color: rgb(246, 246, 249);
+}
