--- a/erchl-frontend/src/app/app.component.html
+++ b/erchl-frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
 -->
 
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">ERCHL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,5 +35,5 @@
   <router-outlet></router-outlet>
 
   <footer class="container" style="margin-top: 45px">
-    <p>&copy; Company 2017-2018</p>
+    <p>&copy; Finovertech 2017-2018 &middot; <a href="https://github.com/Factern/factern-ch/blob/master/LICENSE">License</a></p>
   </footer>
